# Agentic_AI

basic_concepts/: llm_demo.ipynb  pyproject.toml
langgraph/basic_concepts/: main.py
langgraph/langgraph_basics/: calc_add.py  calc_div.py  calc_sub.py  langgraph.json  pyproject.toml
langgraph/langgraph_basics/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph/mailtoner/: arithmetic_op.ipynb  gaps.ipynb  historian.py  langgraph.json  mail_tone.py  main.py  math_agent.py  memory.ipynb  messages.ipynb  pyproject.toml  reducers.ipynb  sequential.ipynb  testing.sqlite-shm  testing.sqlite-wal  threads_checkpointers.ipynb  tools.ipynb  utils.py
langgraph/mailtoner/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph_basics/: calc_mul.py  langgraph.json  main.py  pyproject.toml
langgraph_basics/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
