[project]
name = "mailtoner"
version = "1.0.0"
description = "Langgraph Concepts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "git-filter-repo>=2.47.0",
    "langchain>=1.0.3",
    "langchain-google-vertexai>=3.0.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.5",
    "python-dotenv>=1.2.1",
]

